Fix dark mode icon colors

--- a/client/jetbrains/webview/src/index.scss
+++ b/client/jetbrains/webview/src/index.scss
@@ -7,3 +7,7 @@
         box-shadow: none !important;
     }
 }
+
+.monaco-editor, .monaco-editor-background, .monaco-editor .inputarea.ime-input {
+    background-color: transparent !important;
+}
