--- a/client/jetbrains/webview/src/search/input/JetBrainsSearchBox.module.scss
+++ b/client/jetbrains/webview/src/search/input/JetBrainsSearchBox.module.scss
@@ -51,6 +51,7 @@
         &__icon {
             padding-left: 0.25rem;
             padding-right: 0.75rem;
+            color: var(--jb-icon-color);
         }
 
         &:focus-within {
